src/test/deca/syntax/valid/if.deca
// Description :
//   test d'un seul if

// Résultats :
//   Ok

{
if ( 2 > 5 ) {
   println("hello") ;
}
}