src/test/deca/syntax/invalid/test_synt23.deca
//Resultat:
//      Erreur syntaxique : << token non reconnue
{
if ( 3.3 >>"hello"){
   println("this shouldn't be printed");
}
}
